Fix chart label overlap, grid spacing, and legend alignment

--- a/axelor-front/src/views/chart/widgets/bar/bar-group.module.scss
+++ b/axelor-front/src/views/chart/widgets/bar/bar-group.module.scss
@@ -6,7 +6,7 @@
   height: 0.8rem;
   width: 0.8rem;
   border: 2px solid var(--bs-body-color);
-  margin-top: 1px;
+  margin-top: -1px;
 
   &-active {
     background-color: var(--bs-body-color);
@@ -14,7 +14,7 @@
 }
 
 .actions {
-  top: 3%;
+  top: 0.5rem;
   z-index: 1;
   left: 16%;
   [dir="rtl"] & {
